2013-02-10  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: Minor fixes.

	* x_im_status_screen.c: Minor fixes.

	* fb/x_window.c:
	  clear_margin_area() is not called if flag is not specified to
	  NOTIFY_TO_MYSELF in x_window_resize().
	  (Without this fix, segfault happens when kbd:arabic window is shown in
	  the bottom of the screen.)

	* fb/x.h, fb/x_display.c: Keyboard mode is set to K_CODE instead of K_XLATE
	  in order to handle modifier keys in framebuffer@FreeBSD.

2013-02-08  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.fb, doc/ja/README.fb: Updated.

	* fb/x.h, fb/x_color.c, fb/x_display.c: Support for FreeBSD is added.

	* x_screen.c, x_screen_manager.c: Fixes for framebuffer.

	* x_scrollbar.c: The drawn area of draw_background() is fixed.

2013-02-03  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: Backscroll mode is not exited if pressing a mouse button.

	* ml_pty_ssh.c: Compression is enabled by libssh2_session_flag().

	* version.h.in: 3.1.7 -> 3.1.7 post

2013-02-02  Araki Ken  <arakiken@users.sf.net>

	* xlib/x_imagelib.c, mlimgloader/gdk-pixbuf.c, c_imagelib.c:
	  The function of creating GdkPixbuf from the specified path is integrated
	  to gdk_pixbuf_new_from() in c_imagelib.c.

2013-01-30  Araki Ken  <arakiken@users.sf.net>

	* doc/ja/README.ja, man/mlterm.1, etc/key, etc/main, etc/main.ja,
	  doc/en/PROTOCOL: Updated.

	* x_main_config.[ch]: -M/--menu, --button3 options are removed.

	* x_screen.c, x_screen_manager.c, vte.c:
	  button3_open and conf_menu_path_[1-3] are replaced by x_shortcut
	  using Button1-Button5.

	* x_screen.c:
	  - The bug which didn't redraw a part of full-width characters in
	    window_exposed() is fixed.
	  - "set_shortcut" is added to configuration protocol.

	* x_shortcut.c: Button1-Button5 are available.

	* doc/en/README.fb: Added.

	* doc/en/README.w3m: Updated.

2013-01-26  Araki Ken  <arakiken@users.sf.net>

	* doc/ja/README.fb: Updated.
